minor fix in spacing

--- a/styles.css
+++ b/styles.css
@@ -97,14 +97,14 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    gap: 25px;
+    gap: 40px;
     padding-bottom: 100px;
 
     .info-header {
         color: #1f2937;
         font-size: 38px;
         font-weight: 800;
-        padding-top: 30px;
+        padding-top: 40px;
     }
 
     .info-container {
